@@ -7,5 +7,6 @@ extras_depend:
     account_invoice
     purchase
     sale
+    stock_consignment
 xml:
     account.xml
