@@ -1,3 +1,5 @@
+* Add support for stock_consigment
+
 Version 4.4.0 - 2017-05-01
 * Bug fixes (see mercurial logs for details)
 
